--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 	<div class="container">
 		
-		<header></header>
+		<header>
+			<h1>Curso de Diseño Web: LAChirana Plat [Full Stack MERN]</h1>
+		</header>
 
 		<nav></nav>
 
