Enlace Css Externo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+	<link rel="stylesheet" type="text/css" href="styles/index.css" />
+
 	<title>LAChirana Plat</title>
 </head>
 <body>
