--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 
-	<link rel="stylesheet" type="text/css" href="styles/index.css" />
+	<style type="text/css">
+		body{
+			background: green
+		}
+	</style>
 
 	<title>LAChirana Plat</title>
 </head>
